[package]
name = "zebra"
authors = ["Emil Sayahi"]
description = "A vector database for querying meaningfully similar data."
repository = "https://github.com/emmyoh/zebra/"
license = "AGPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
name = "zebra"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "zebra"
path = "src/main.rs"
doc = false
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"], optional = true }
fastembed = "3.5.0"
hnsw = { version = "0.11.0", features = ["serde1"] }
ordered-float = "4.2.0"
pcg_rand = { version = "0.13.0", features = ["serde1"] }
serde = "1.0.198"
simsimd = "4.3.1"
space = "0.17.0"
lz4_flex = { version = "0.11.3", default-features = false, features = ["frame"] }
ticky = { version = "1.0.2", optional = true }
pretty-duration = { version = "0.1.1", optional = true }
indicatif = { version = "0.17.8", optional = true }
distances = "1.6.3"
candle-examples = "0.4.1"
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
hf-hub = "0.3.2"
viuer = { version = "0.7.1", optional = true }
sonogram = "0.7.1"
image = "0.24.9"
rodio = { version = "0.17.3", optional = true }

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-examples/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-examples/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle-core/mkl", "candle-examples/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-examples/metal", "candle-nn/metal", "candle-transformers/metal"]
sixel = ["viuer/sixel"]
avif = ["image/avif-encoder", "image/avif-decoder"]
cli = ["clap", "ticky", "pretty-duration", "indicatif", "viuer", "rodio"]
clap = ["dep:clap"]
indicatif = ["dep:indicatif"]
pretty-duration = ["dep:pretty-duration"]
rodio = ["dep:rodio"]
ticky = ["dep:ticky"]
viuer = ["dep:viuer"]
