[package]
name = "zebra"
authors = ["Emil Sayahi"]
description = "A vector database for querying meaningfully similar data."
repository = "https://github.com/emmyoh/zebra/"
license = "AGPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
name = "zebra"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "zebra"
path = "src/main.rs"
doc = false
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"], optional = true }
fastembed = "4.3.0"
hnsw = { version = "0.11.0", features = ["serde1"] }
ordered-float = "4.5.0"
pcg_rand = { version = "0.13.0", features = ["serde1"] }
serde = "1.0.216"
simsimd = "6.2.1"
space = "0.17.0"
lz4_flex = { version = "0.11.3", default-features = false, features = ["frame"] }
ticky = { version = "1.0.2", optional = true }
pretty-duration = { version = "0.1.1", optional = true }
indicatif = { version = "0.17.9", optional = true, features = ["rayon", "improved_unicode"] }
distances = "1.8.0"
candle-examples = "0.8.1"
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-transformers = "0.8.1"
hf-hub = "0.3.2"
viuer = { version = "0.9.1", features = ["print-file"], optional = true }
sonogram = "0.7.1"
image = "0.25.5"
rodio = { version = "0.20.1", optional = true }
rayon = "1.10.0"
bytes = { version = "1.9.0", features = ["serde"] }
symphonia = "0.5.4"
anyhow = "1.0.94"
typetag = "0.2.18"

[features]
default = []
default_db = []
accelerate = ["candle-core/accelerate", "candle-examples/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-examples/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle-core/mkl", "candle-examples/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-examples/metal", "candle-nn/metal", "candle-transformers/metal"]
sixel = ["viuer/sixel"]
cli = ["default_db", "dep:clap", "dep:ticky", "dep:pretty-duration", "dep:indicatif", "dep:viuer", "dep:rodio"]
